--- a/index.html
+++ b/index.html
@@ -3,8 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Polle Profitrolle – Кондитерская Ижевска №1</title>
     <link rel="stylesheet" href="static/css/style.css">
+    
+    <!-- Slick CSS -->
+     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
+    
+    <!-- jQuery + Slick JS -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 </head>
 <body>
     <header>
@@ -40,10 +48,20 @@
                 <img src="static/img/bakery.png" alt="Polle Profiterolle bakery">
             </div>
         </div>
+        <div class="products">
+            <h1>Наша выпечка</h1>
+            <div class="products_carousel">
+                <!-- Placeholders -->
+                <div><img src="static/img/carousel1.jpg" alt=""></div>
+                <div><img src="static/img/carousel2.webp" alt=""></div>
+                <div><img src="static/img/carousel3.webp" alt=""></div>
+            </div>
+        </div>
     </main>
 
     <footer>
 
     </footer>
+    <script src="static/js/script.js"></script>
 </body>
 </html>
