--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <header>
         <div class="header__logo">
-            <img src="logo__image" alt="logo">
+            <img src="" alt="logo">
             <p class="logo__name">Polle Profiterolle</p>
         </div>
         <div class="header__menu">
@@ -45,18 +45,97 @@
                 </div>
             </div>
             <div class="intro__image">
-                <img src="static/img/bakery.png" alt="Polle Profiterolle bakery">
+                <img src="static/img/logo2.webp" alt="Polle Profiterolle bakery">
             </div>
         </div>
         <div class="products">
             <h1>Наша выпечка</h1>
             <div class="products_carousel">
-                <!-- Placeholders -->
-                <div><img src="static/img/carousel1.jpg" alt=""></div>
-                <div><img src="static/img/carousel2.webp" alt=""></div>
-                <div><img src="static/img/carousel3.webp" alt=""></div>
+				<div>
+					<img src="static/img/eclairs.webp" alt="Эклеры">
+					<p>Эклеры</p>
+				</div>
+				<div>
+					<img src="static/img/cakes.webp" alt="Торты">
+					<p>Торты</p>
+				</div>
+				<div>
+					<img src="static/img/cheesecakes.webp" alt="Чизкейки">
+					<p>Чизкейки</p>
+				</div>
+				<div>
+					<img src="static/img/tarts.webp" alt="Тарты">
+					<p>Тарты</p>
+				</div>
+				<div>
+					<img src="static/img/trifles.webp" alt="Трайфлы">
+					<p>Трайфлы</p>
+				</div>
+				<div>
+					<img src="static/img/bakery.webp" alt="Выпечка">
+					<p>Выпечка</p>
+				</div>
+				<div>
+					<img src="static/img/drinks.webp" alt="Напитки">
+					<p>Напитки</p>
+				</div>
             </div>
         </div>
+	<div class="about">
+		<h1>О нас</h1>
+		<div class="about__cards">
+			<div class="about__card">
+				<img src="static/img/truck.svg">
+				<div>
+					<h2>Проверенные поставщики</h2>
+					<p>Наша компания тщательно подходит к выбору поставщиков наших продуктов</p>
+				</div>
+			</div>
+			<div class="about__card">
+				<img src="static/img/heart.svg">
+				<div>
+					<h2>Делаем с любовью</h2>
+					<p>Каждый товар проходит тщательную проверку, чтобы дарить счастье нашим клиентам</p>
+				</div>
+			</div>
+			<div class="about__card">
+				<img src="static/img/coins.svg">
+				<div>
+					<h2>Выгодные цены</h2>
+					<p>Продаём ниже рыночной стоимости, чтобы наша продукция была доступна каждому</p>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="contacts">
+		<h1>Контакты</h1>
+		<div>
+			<div>
+				<div class="address">
+					<h2>Адреса</h2>
+					<ul>
+						<li> ул. 40 лет Победы, 138
+						<li> ул. 10 лет Октября, 62
+						<li> Восточный жилой район, 7-й микрорайон, жилой комплекс Берша Сити
+					</ul>
+				</div>
+				<div>
+					<h2>Контакты</h2>
+					<div class="contacts__container">
+						<a href="" class="contacts__button"><img src="" alt="WhatsApp"></a>
+						<a href="" class="contacts__button"><img src="" alt="PhoneNumber"></a>
+						<a href="" class="contacts__button"><img src="" alt="Map"></a>
+					<div>
+				</div>
+			</div>
+			<div style="position:relative;overflow:hidden;"><a href="https://yandex.ru/maps/org/pol_profitrol/34348852555/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:0px;">Поль профитроль</a><a href="https://yandex.ru/maps/44/izhevsk/category/confectionary/184108017/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:14px;">Кондитерская в Ижевске</a><iframe src="https://yandex.ru/map-widget/v1/org/pol_profitrol/34348852555/?ll=53.286110%2C56.847075&z=13.9" width="560" height="400" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe>
+			</div>
+		</div>
+	</div>
+	<div class="reviews">
+		<h1>Отзывы</h1>
+		<div style="width:560px;height:800px;overflow:hidden;position:relative;"><iframe style="width:100%;height:100%;border:1px solid #e6e6e6;border-radius:8px;box-sizing:border-box" src="https://yandex.ru/maps-reviews-widget/34348852555?comments"></iframe><a href="https://yandex.ru/maps/org/pol_profitrol/34348852555/" target="_blank" style="box-sizing:border-box;text-decoration:none;color:#b3b3b3;font-size:10px;font-family:YS Text,sans-serif;padding:0 20px;position:absolute;bottom:8px;width:100%;text-align:center;left:0;overflow:hidden;text-overflow:ellipsis;display:block;max-height:14px;white-space:nowrap;padding:0 16px;box-sizing:border-box">Поль профитроль на карте Ижевска — Яндекс Карты</a></div>
+	</div>
     </main>
 
     <footer>
