--- a/index.html
+++ b/index.html
@@ -22,18 +22,20 @@
 <body>
 	<header>
 		<div class="header__logo">
-			<a href="">
+			<a href="#">
 				<img src="static/img/logo.png" alt="logo">
-				<p class="logo__name">Polle Profiterolle</p>
+				<p class="logo__name">POLLE PROFITEROLLE</p>
 			</a>
 		</div>
 		<div class="header__menu">
+			<!-- <button class="nav-toggle" aria-label="Toggle navigation">
+				<span class="hamburger"></span>
+    		</button> -->
 			<nav>
 				<ul>
-					<li><a href="">Наша выпечка</a></li>
-					<li><a href="">О нас</a></li>
-					<li><a href="">Мы на карте</a></li>
-					<li><a href="">Отзывы</a></li>
+					<li><a href="#contacts">Мы на карте</a></li>
+					<li><a href="">Меню</a></li>
+					<li><a href="">Галерея</a></li>
 				</ul>
 			</nav>
 		</div>
@@ -43,8 +45,7 @@
 		<div class="intro">
 			<div class="intro__text">
 				<div>
-					<h1>Polle Profiterolle</h1>
-					<h2>Истинный вкус в деталях</h2>
+					<h1>Истинный вкус в деталях</h1>
 				</div>
 				<div>
 					<p>Polle Profiterolle – это сеть кондитерских в Ижевске, которая с особым вниманием подходит к
@@ -53,7 +54,7 @@
 				</div>
 			</div>
 			<div class="intro__image">
-				<img src="static/img/logo2.webp" alt="Polle Profiterolle bakery">
+				<img src="static/img/house.webp" alt="Polle Profiterolle bakery">
 			</div>
 		</div>
 		<div class="products">
@@ -68,7 +69,7 @@
 					<p>Пирожное</p>
 				</div>
 				<div>
-					<img src="" alt="Торты">
+					<img src="static/img/cakes2.webp" alt="Торты">
 					<p>Торты</p>
 				</div>
 				<div>
@@ -99,6 +100,7 @@
 		</div>
 		<div class="about">
 			<h1>О нас</h1>
+			<div class="line-top"></div>
 			<div class="about__cards">
 				<div class="about__card">
 					<img src="static/img/truck.svg">
@@ -122,9 +124,10 @@
 					</div>
 				</div>
 			</div>
+			<div class="line-bottom"></div>
 		</div>
-		<div class="contacts">
-			<h1>Контакты</h1>
+		<div class="contacts" id="contacts">
+			<h1>Местоположение</h1>
 			<div class="contacts__content">
 				<div class="contacts__left">
 					<div class="address">
@@ -132,22 +135,9 @@
 						<hr>
 						<ul>
 							<li> ул. 40 лет Победы, 138
-							<hr>
 							<li> ул. 10 лет Октября, 62
-							<hr>
 							<li> Восточный жилой район, 7-й микрорайон, жилой комплекс Берша Сити
 						</ul>
-					</div>
-					<div class="contacts__block">
-						<h2>Контакты</h2>
-						<hr>
-						<div class="contacts__container">
-							<a href="" class="contacts__button"><img src="static/img/whatapp.svg" alt="WhatsApp"></a>
-							<a href="" class="contacts__button"><img src="static/img/phone.svg" alt="PhoneNumber"></a>
-							<a href="" class="contacts__button"><img src="static/img/map.svg" alt="Map"></a>
-							<div>
-							</div>
-						</div>
 					</div>
 				</div>
 				<div style="position:relative;overflow:hidden;"><a
@@ -155,9 +145,8 @@
 						style="color:#eee;font-size:12px;position:absolute;top:0px;">поль профитроль в Ижевске</a><a
 						href="https://yandex.ru/maps/44/izhevsk/?utm_medium=mapframe&utm_source=maps"
 						style="color:#eee;font-size:12px;position:absolute;top:14px;">Ижевск</a><iframe
-						src="https://yandex.ru/map-widget/v1/?ll=53.304151%2C56.855053&mode=search&sctx=ZAAAAAgBEAAaKAoSCSzWcJF7mkpAEZSGGoUkbUxAEhIJj3IwmwDDzj8RYRxcOuY8sz8iBgABAgMEBSgKOABAwp8NSAFqAnJ1nQHNzMw9oAEAqAEAvQH0nWdwwgERy8rn%2Bn%2F3lbvLmASmtoSPuAGCAh3Qv9C%2B0LvRjCDQv9GA0L7RhNC40YLRgNC%2B0LvRjIoCAJICAJoCDGRlc2t0b3AtbWFwcw%3D%3D&sll=53.304151%2C56.855053&sspn=0.138031%2C0.043158&text=%D0%BF%D0%BE%D0%BB%D1%8C%20%D0%BF%D1%80%D0%BE%D1%84%D0%B8%D1%82%D1%80%D0%BE%D0%BB%D1%8C&z=13.8"
-						width="860" height="550" frameborder="1" allowfullscreen="true"
-						style="position:relative;"></iframe></div>
+						src="https://yandex.ru/map-widget/v1/?from=mapframe&ll=53.259668%2C56.855181&mode=search&sctx=ZAAAAAgBEAAaKAoSCdkFg2vupkpAEWCsb2BybUxAEhIJhnwcbrkHtT8RIq629DL%2Fpj8iBgABAgMEBSgKOABALEgBagJydZ0BzczMPaABAKgBAL0B9J1ncMIBEcvK5%2Fp%2FpraEj7gB95W7y5gEggId0L%2FQvtC70Ywg0L%2FRgNC%2B0YTQuNGC0YDQvtC70YyKAgCSAgCaAgxkZXNrdG9wLW1hcHM%3D&sll=53.259668%2C56.855181&source=mapframe&sspn=0.138031%2C0.043158&text=%D0%BF%D0%BE%D0%BB%D1%8C%20%D0%BF%D1%80%D0%BE%D1%84%D0%B8%D1%82%D1%80%D0%BE%D0%BB%D1%8C&utm_source=mapframe&z=13.8"
+						width="860" height="550" allowfullscreen="true" style="position:relative;"></iframe></div>
 			</div>
 			<div class="reviews">
 				<h1>Отзывы</h1>
@@ -171,7 +160,28 @@
 	</main>
 
 	<footer>
-
+		<nav>
+			<div>
+				<a href="#" class="footer__logo">
+					<img src="static/img/logo-footer.png" alt="logo">
+					<p class="logo__text">POLLE PROFITEROLLE</p>
+				</a>
+			</div>
+			<div class="footer__nav">
+				<a href="#contacts">Мы на карте</a>
+				<a href="">Меню</a>
+				<a href="">Галерея</a>
+			</div>
+		</nav>
+		<div class="footer__center">
+			<p>ИП Астахова В.А. ОГРНИП 322183200025191 ИНН 183307568473</p>
+			<p>2025</p>
+		</div>
+		<div class="footer__right">
+			<p>УР Завьяловский р-н, д. Позимь д. 1н</p>
+			<p>Электронная почта: tortik.2022@list.ru</p>
+			<p>Телефон: 89292775443</p>
+		</div>
 	</footer>
 	<script src="static/js/script.js"></script>
 </body>
