Adaptive website progress

--- a/index.html
+++ b/index.html
@@ -134,9 +134,9 @@
 						<h2>Адреса</h2>
 						<hr>
 						<ul>
-							<li> ул. 40 лет Победы, 138
-							<li> ул. 10 лет Октября, 62
-							<li> Восточный жилой район, 7-й микрорайон, жилой комплекс Берша Сити
+							<li> г. Ижевск, ул. 40 лет Победы, 138
+							<li> г. Ижевск, ул. 10 лет Октября, 62
+							<li> г. Ижевск, Восточный жилой район, 7-й микрорайон, жилой комплекс Берша Сити
 						</ul>
 					</div>
 				</div>
