--- a/index.html
+++ b/index.html
@@ -28,9 +28,6 @@
 			</a>
 		</div>
 		<div class="header__menu">
-			<!-- <button class="nav-toggle" aria-label="Toggle navigation">
-				<span class="hamburger"></span>
-    		</button> -->
 			<nav>
 				<ul>
 					<li><a href="#contacts">Мы на карте</a></li>
@@ -128,60 +125,66 @@
 		</div>
 		<div class="contacts" id="contacts">
 			<h1>Местоположение</h1>
-			<div class="contacts__content">
-				<div class="contacts__left">
-					<div class="address">
-						<h2>Адреса</h2>
-						<hr>
-						<ul>
-							<li> г. Ижевск, ул. 40 лет Победы, 138
-							<li> г. Ижевск, ул. 10 лет Октября, 62
-							<li> г. Ижевск, Восточный жилой район, 7-й микрорайон, жилой комплекс Берша Сити
-						</ul>
+			<div>
+				<div class="contacts__content">
+					<div class="contacts__left">
+						<div class="address">
+							<h2>Адреса</h2>
+							<hr>
+							<ul>
+								<li> г. Ижевск, ул. 40 лет Победы, 138
+								<li> г. Ижевск, ул. 10 лет Октября, 62
+								<li> г. Ижевск, Восточный жилой район, 7-й микрорайон, жилой комплекс Берша Сити
+							</ul>
+						</div>
 					</div>
+					<div style="position:relative;overflow:hidden;" class="yandex-map"><a
+							href="https://yandex.ru/maps/44/izhevsk/search/%D0%BF%D0%BE%D0%BB%D1%8C%20%D0%BF%D1%80%D0%BE%D1%84%D0%B8%D1%82%D1%80%D0%BE%D0%BB%D1%8C/?utm_medium=mapframe&utm_source=maps"
+							style="color:#eee;font-size:12px;position:absolute;top:0px;">поль профитроль в Ижевске</a><a
+							href="https://yandex.ru/maps/44/izhevsk/?utm_medium=mapframe&utm_source=maps"
+							style="color:#eee;font-size:12px;position:absolute;top:14px;">Ижевск</a><iframe
+							src="https://yandex.ru/map-widget/v1/?from=mapframe&ll=53.259668%2C56.855181&mode=search&sctx=ZAAAAAgBEAAaKAoSCdkFg2vupkpAEWCsb2BybUxAEhIJhnwcbrkHtT8RIq629DL%2Fpj8iBgABAgMEBSgKOABALEgBagJydZ0BzczMPaABAKgBAL0B9J1ncMIBEcvK5%2Fp%2FpraEj7gB95W7y5gEggId0L%2FQvtC70Ywg0L%2FRgNC%2B0YTQuNGC0YDQvtC70YyKAgCSAgCaAgxkZXNrdG9wLW1hcHM%3D&sll=53.259668%2C56.855181&source=mapframe&sspn=0.138031%2C0.043158&text=%D0%BF%D0%BE%D0%BB%D1%8C%20%D0%BF%D1%80%D0%BE%D1%84%D0%B8%D1%82%D1%80%D0%BE%D0%BB%D1%8C&utm_source=mapframe&z=13.8"
+							width="860" height="550" allowfullscreen="true" style="position:relative;"></iframe></div>
 				</div>
-				<div style="position:relative;overflow:hidden;"><a
-						href="https://yandex.ru/maps/44/izhevsk/search/%D0%BF%D0%BE%D0%BB%D1%8C%20%D0%BF%D1%80%D0%BE%D1%84%D0%B8%D1%82%D1%80%D0%BE%D0%BB%D1%8C/?utm_medium=mapframe&utm_source=maps"
-						style="color:#eee;font-size:12px;position:absolute;top:0px;">поль профитроль в Ижевске</a><a
-						href="https://yandex.ru/maps/44/izhevsk/?utm_medium=mapframe&utm_source=maps"
-						style="color:#eee;font-size:12px;position:absolute;top:14px;">Ижевск</a><iframe
-						src="https://yandex.ru/map-widget/v1/?from=mapframe&ll=53.259668%2C56.855181&mode=search&sctx=ZAAAAAgBEAAaKAoSCdkFg2vupkpAEWCsb2BybUxAEhIJhnwcbrkHtT8RIq629DL%2Fpj8iBgABAgMEBSgKOABALEgBagJydZ0BzczMPaABAKgBAL0B9J1ncMIBEcvK5%2Fp%2FpraEj7gB95W7y5gEggId0L%2FQvtC70Ywg0L%2FRgNC%2B0YTQuNGC0YDQvtC70YyKAgCSAgCaAgxkZXNrdG9wLW1hcHM%3D&sll=53.259668%2C56.855181&source=mapframe&sspn=0.138031%2C0.043158&text=%D0%BF%D0%BE%D0%BB%D1%8C%20%D0%BF%D1%80%D0%BE%D1%84%D0%B8%D1%82%D1%80%D0%BE%D0%BB%D1%8C&utm_source=mapframe&z=13.8"
-						width="860" height="550" allowfullscreen="true" style="position:relative;"></iframe></div>
 			</div>
-			<div class="reviews">
-				<h1>Отзывы</h1>
-				<div style="width:560px;height:800px;overflow:hidden;position:relative;"><iframe
-						style="width:100%;height:100%;border:1px solid #e6e6e6;border-radius:8px;box-sizing:border-box"
-						src="https://yandex.ru/maps-reviews-widget/34348852555?comments"></iframe><a
-						href="https://yandex.ru/maps/org/pol_profitrol/34348852555/" target="_blank"
-						style="box-sizing:border-box;text-decoration:none;color:#b3b3b3;font-size:10px;font-family:YS Text,sans-serif;padding:0 20px;position:absolute;bottom:8px;width:100%;text-align:center;left:0;overflow:hidden;text-overflow:ellipsis;display:block;max-height:14px;white-space:nowrap;padding:0 16px;box-sizing:border-box">Поль
-						профитроль на карте Ижевска — Яндекс Карты</a></div>
-			</div>
+		</div>
+		<div class="reviews">
+			<h1>Отзывы</h1>
+			<div class="reviews-iframe"><iframe
+					style="width:100%;height:100%;border:1px solid #e6e6e6;border-radius:8px;box-sizing:border-box"
+					src="https://yandex.ru/maps-reviews-widget/34348852555?comments"></iframe><a
+					href="https://yandex.ru/maps/org/pol_profitrol/34348852555/" target="_blank"
+					style="box-sizing:border-box;text-decoration:none;color:#b3b3b3;font-size:10px;font-family:YS Text,sans-serif;padding:0 20px;position:absolute;bottom:8px;width:100%;text-align:center;left:0;overflow:hidden;text-overflow:ellipsis;display:block;max-height:14px;white-space:nowrap;padding:0 16px;box-sizing:border-box">Поль
+					профитроль на карте Ижевска — Яндекс Карты</a></div>
+		</div>
 	</main>
 
 	<footer>
-		<nav>
-			<div>
-				<a href="#" class="footer__logo">
-					<img src="static/img/logo-footer.png" alt="logo">
-					<p class="logo__text">POLLE PROFITEROLLE</p>
-				</a>
+		<div class="footer__top">
+			<nav>
+				<div>
+					<a href="#" class="footer__logo">
+						<img src="static/img/logo-footer.png" alt="logo">
+						<p class="logo__text">POLLE PROFITEROLLE</p>
+					</a>
+				</div>
+				<div class="footer__nav">
+					<a href="#contacts">Мы на карте</a>
+					<a href="">Меню</a>
+					<a href="">Галерея</a>
+				</div>
+			</nav>
+			<div class="footer__right">
+				<p>УР, Завьяловский р-н, д. Позимь, 1</p>
+				<p>Электронная почта: tortik.2022@list.ru</p>
+				<p>Телефон: 89292775443</p>
 			</div>
-			<div class="footer__nav">
-				<a href="#contacts">Мы на карте</a>
-				<a href="">Меню</a>
-				<a href="">Галерея</a>
-			</div>
-		</nav>
-		<div class="footer__center">
+		</div>
+		<div class="footer__bottom">
 			<p>ИП Астахова В.А. ОГРНИП 322183200025191 ИНН 183307568473</p>
 			<p>2025</p>
 		</div>
-		<div class="footer__right">
-			<p>УР Завьяловский р-н, д. Позимь д. 1н</p>
-			<p>Электронная почта: tortik.2022@list.ru</p>
-			<p>Телефон: 89292775443</p>
-		</div>
+
 	</footer>
 	<script src="static/js/script.js"></script>
 </body>
