--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
 	<header>
 		<div class="header__logo">
-			<a href="#">
+			<a href="index.html">
 				<img src="static/img/logo.png" alt="logo">
 				<p class="logo__name">POLLE PROFITEROLLE</p>
 			</a>
@@ -31,8 +31,8 @@
 			<nav>
 				<ul>
 					<li><a href="#contacts">Мы на карте</a></li>
-					<li><a href="">Меню</a></li>
-					<li><a href="">Галерея</a></li>
+					<li><a href="menu.html">Меню</a></li>
+					<li><a href="gallery.html">Галерея</a></li>
 				</ul>
 			</nav>
 		</div>
