--- a/menu.html
+++ b/menu.html
@@ -5,24 +5,14 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Polle Profitrolle – Кондитерская Ижевска №1</title>
-	<link rel="stylesheet" href="static/css/style.css">
-
-
-	<!-- Slick CSS -->
-	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
-	<link rel="stylesheet" type="text/css"
-		href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css" />
-
-
-	<!-- jQuery + Slick JS -->
-	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+	<link rel="stylesheet" href="static/css/menu.css">
 </head>
 
 <body>
 	<header>
 		<div class="header__logo">
-			<a href="#">
+			<a href="index.html">
 				<img src="static/img/logo.png" alt="logo">
 				<p class="logo__name">POLLE PROFITEROLLE</p>
 			</a>
@@ -30,16 +20,124 @@
 		<div class="header__menu">
 			<nav>
 				<ul>
-					<li><a href="#contacts">Мы на карте</a></li>
-					<li><a href="">Меню</a></li>
-					<li><a href="">Галерея</a></li>
+					<li><a href="index.html#contacts">Мы на карте</a></li>
+					<li><a href="#">Меню</a></li>
+					<li><a href="gallery.html">Галерея</a></li>
 				</ul>
 			</nav>
 		</div>
 	</header>
 
 	<main>
-    <h1>Меню</h1>
+    <h1 class="main-header">Меню</h1>
+	<div class="accordion" id="menuAccordion">
+  <div class="accordion-item">
+    <h2 class="accordion-header">
+      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#bakery">
+        <h1>Эклеры</h1>
+      </button>
+    </h2>
+    <div id="bakery" class="accordion-collapse collapse show" data-bs-parent="#bakery">
+      <div class="accordion-body">
+		<div class="item">
+			<h3>Эклер с клубникой</h3>
+			<p>Выпеченный эклер начиняется кремом "Маскарпоне" смешанным с клубничным конфитюром. Сверху обливается шоколадным покрытие и декорируется белым шоколадным покрытием.</p>
+		</div>
+		<div class="item">
+			<h3>Эклер с манго</h3>
+			<p>Выпеченный эклер начиняется кремом "Маскарпоне" смешанным с конфитюром из манго. Сверху обливается белым шоколадным покрытием и декорируется шоколадным и ликерным покрытием.</p>
+		</div>
+		<div class="item">
+			<h3>Эклер с малиной</h3>
+			<p>Выпеченный эклер начиняется кремом "Маскарпоне" смешанным с конфитюром из малины. Сверху покрыт этим же кремом и декорируется шоколадным покрытием и сублимированной малиной.</p>
+		</div>
+		 <div class="item">
+			<h3>Эклер с лимонным кремом</h3>
+			<p>Выпеченный эклер начиняется кремом "Маскарпоне" смешанным с лимонным конфитюром. Сверху обливается и декорируется белым шоколадным и ликерным покрытием.</p>
+		</div>
+		 <div class="item">
+			<h3>Эклер с шоколадным и ванильным кремом</h3>
+			<p>Выпеченный эклер начиняется заварным шоколадным кремом и кремом "Маскарпоне". Сверху покрывается этим же кремом, обсыпается тёртой белой глазурью.</p>
+		</div>
+		<div class="item">
+			<h3>Эклер с кремом</h3>
+			<p>Выпеченный эклер начиняется кремом "Маскарпоне". Сверху покрывается этим же кремом, обсыпается шоколадной тёртой глазурью и сахарной пудрой.</p>
+		</div>
+      </div>
+    </div>
+  </div>
+  
+  <div class="accordion-item">
+    <h2 class="accordion-header">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#cakes">
+        <h1>Торты</h1>
+      </button>
+    </h2>
+    <div id="cakes" class="accordion-collapse collapse" data-bs-parent="#menuAccordion">
+      <div class="accordion-body">
+		<div class="item">
+			<h3>Торт бисквитный "Сникерс"</h3>
+			<p>Слои шоколадного бисквита промазаны сырным кремом и солёной карамелью. Сверху оформлен солёной карамелью с жареным арахисом и мягким шоколадным покрытием. Декор из сырного кремо и жареных лепесткой арахиса</p>
+		</div>
+		 <div class="item">
+			<h3>Торт бисквитный "Малина с фисташкой"</h3>
+			<p>Слои ванильного бисквита промазаны сырным кремом и сваренным малиновым конфитюром. Сверху покрыт фисташковым покрытием. Декор из сливочного крема с цельной сгущёнкой и фисташкой.</p>
+		</div>
+		<div class="item">
+			<h3>Торт песочный "Встреча"</h3>
+			<p>Три слоя песочного крожа с маком, изюмом и грецким орехом промазаны кремом с варёной сгущёнкой. Сверху покрыт шоколадным масляным кремом. Декор из сливочного крема с цельной сгущёнкой и крема с варёной сгущёнкой</p>
+		</div> 
+		<div class="item">
+			<h3>Торт слоёный "Наполеон"</h3>
+			<p>Коржи промазаны ванильным заварным кремом. Сверху покрыт крошкой от этих коржей и посыпан сахарной пудрой.</p>
+		</div> 
+		<div class="item">
+			<h3>Торт бисквитный "Панчо"</h3>
+			<p>Ванильный и шоколадный бисквит, зефирно-сметанный крем, консервированные ананасы. Декор шоколадное покрытие и грецкий орех.</p>
+		</div>
+		<div class="item">
+			<h3>Торт бисквитный "Тирамису"</h3>
+			<p>Ванильный бисквит, сахарный сироп с кофе и коньяком, крем "Маскарпоне". Сверху этот же кре и посыпка натуральным какао.</p>
+		</div>
+		<div class="item">
+			<h3>Торт бисквитный "Молочная девочка"</h3>
+			<p>Слои тонкого и нежного бисквита, промочены цельной сгущёнкой с сахарным сиропом, промазаны нежным кремом, заварным кремом и животными сливками. Оформлен дольками клубники в желе.</p>
+		</div>
+		<div class="item">
+			<h3>Торт бисквитный "Зимняя вишня"</h3>
+			<p>Слои шоколадного бисквита промазаны сваренным конфитюром из вишни, прослоены заварным шоколадным кремом на коньяке, покрыт мягким шоколадными покрытием. Украшается белым шоколадным покрытием, консервированной вишней и сливочным кремом с цельной сгущёнкой</p>
+		</div>
+		<div class="item">
+			<h3>Торт бисквитный "Кассиопея"</h3>
+			<p>Ванильный бисквит, крем "Маскарпоне", лимонный конфитюр. Сверху покрыт этим же кремом. Декор: сушённая хурма с пищевыми блестками, жёлтой сахарной пудрой и шоколадной глазурью в виде шоколадок.</p>
+		</div>
+      </div>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <h2 class="accordion-header">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#roulettes">
+		<h1>Рулеты</h1>
+      </button>
+    </h2>
+    <div id="roulettes" class="accordion-collapse collapse" data-bs-parent="#roulettes">
+      <div class="accordion-body">
+		<div class="item">
+			<h3>Рулет бисквитный "Малиновый имбирь"</h3>
+			<p>Ванильный бисквит промазан сваренным малиновым конфитюром и сливочно-заварным кремом с сыром и натёртым имбирём. Покрыт зеркальным гелем. Декор из шоколадного покрытия со вкусом банана и дроблёной фисташки.</p>
+		</div>
+		<div class="item">
+			<h3>Рулет бисквитный "С вишней"</h3>
+			<p>Ванильный бисквит промазан сливочно-заварным кремом с сыром. В середине рулета сваренный нами конфитюр из вишни. Покрыт шоколадным кремом и посыпан тёртой шоколадной глазурью</p>
+		</div>
+		<div class="item">
+			<h3>Рулет бисквитный "Со сливой"</h3>
+			<p>Ванильный бисквит промазан сливочно-заварным кремом с сыром. В середине рулета сваренный нами конфитюр из сливы. Покрыт шоколадным кремом и посыпан натуральным какао.</p>
+		</div> 
+      </div>
+    </div>
+  </div>
+</div>
 	</main>
 
 	<footer>
@@ -66,7 +164,7 @@
 			<p>Телефон: 89292775443</p>
 		</div>
 	</footer>
-	<script src="static/js/script.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
