--- a/menu.html
+++ b/menu.html
@@ -51,9 +51,13 @@
 			<h3>Эклер с малиной</h3>
 			<p>Выпеченный эклер начиняется кремом "Маскарпоне" смешанным с конфитюром из малины. Сверху покрыт этим же кремом и декорируется шоколадным покрытием и сублимированной малиной.</p>
 		</div>
-		 <div class="item">
+		<div class="item">
 			<h3>Эклер с лимонным кремом</h3>
 			<p>Выпеченный эклер начиняется кремом "Маскарпоне" смешанным с лимонным конфитюром. Сверху обливается и декорируется белым шоколадным и ликерным покрытием.</p>
+		</div>
+		<div class="item">
+			<h3>Эклер с вишней</h3>
+			<p>Выпеченный эклер начиняется кремом "Маскарпоне" смешанным с конфитюром из вишни. Сверху покрыт этим же кремом, края облиты зеркальным покрытием. Декорируется шоколадным покрытием.</p>
 		</div>
 		 <div class="item">
 			<h3>Эклер с шоколадным и ванильным кремом</h3>
@@ -134,6 +138,133 @@
 			<h3>Рулет бисквитный "Со сливой"</h3>
 			<p>Ванильный бисквит промазан сливочно-заварным кремом с сыром. В середине рулета сваренный нами конфитюр из сливы. Покрыт шоколадным кремом и посыпан натуральным какао.</p>
 		</div> 
+      </div>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <h2 class="accordion-header">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#tarts">
+		<h1>Тарты</h1>
+      </button>
+    </h2>
+    <div id="tarts" class="accordion-collapse collapse" data-bs-parent="#tarts">
+      <div class="accordion-body">
+		<div class="item">
+			<h3>Тарт с орехами и кленовым сиропом</h3>
+			<p>Основа песочного коржа, свилочно-сметанный мусс, арахис, грецкий орех, варёная сгущёнка, кленовый сироп.</p>
+		</div>
+		<div class="item">
+			<h3>Тарт с вишней</h3>
+			<p>Основа песочного коржа, сливочно-сметанный мусс, сваренный конфитюр из вишни.</p>
+		</div>
+		<div class="item">
+			<h3>Тарт с персиком</h3>
+			<p>Основа песочного коржа, сливочно-сметанный мусс, сваренный конфитюр из персика, фисташка.</p>
+		</div>
+		<div class="item">
+			<h3>Тарт с вишней</h3>
+			<p>Основа песочного коржа, сливочно-сметанный мусс, вишня в желе.</p>
+		</div>
+		<div class="item">
+			<h3>Основа песочного коржа, сливочно-сметанный мусс, клубника в желе.</h3>
+			<p></p>
+		</div>
+      </div>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <h2 class="accordion-header">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#hotdogcakes">
+		<h1>Пирожные муссовые "Хот-доги"</h1>
+      </button>
+    </h2>
+    <div id="hotdogcakes" class="accordion-collapse collapse" data-bs-parent="#hotdogcakes">
+      <div class="accordion-body">
+		<div class="item">
+			<h3>Хот-дог с бананом</h3>
+			<p>Пирожное состоит из ванильного мусса, ванильного бисквита и бананового конфитюра. Декор из сливочного крема с цельной сгущёнкой и банановых чипсов.</p>
+		</div>
+		<div class="item">
+			<h3>Хот-дог со сливой</h3>
+			<p>Пирожное состоит из шоколадного мусса, шоколадного бисквита и сваренного и сливы конфитюра. Декор из сливочного крема с цельной сгущёнкой и натурального какао.</p>
+		</div>
+		<div class="item">
+			<h3>Хот-дог с облепихой</h3>
+			<p>Пирожное состоит из ванильного мусса, ванильного бисквита и сваренного из облепихи конфитюра.</p>
+		</div>
+      </div>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <h2 class="accordion-header">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#profiterolle">
+		<h1>Профитроли</h1>
+      </button>
+    </h2>
+    <div id="profiterolle" class="accordion-collapse collapse" data-bs-parent="#profiterolle">
+      <div class="accordion-body">
+		<div class="item">
+			<h3>Профитроли со сливой</h3>
+			<p>Выпеченные профитроли начиняются конфитюром из сливы и кремом "Маскарпоне". Заливаются тёмным шоколадным покрытием. Декор из этого же крема и белое шоколадное покрытие.</p>
+		</div>
+		<div class="item">
+			<h3>Профитроли со с варёной сгущёнкой и кремом</h3>
+			<p>Выпеченные профитроли начиняются варёной сгущёнкой и кремом "Маскарпоне". Оформлены этим же кремом, тёртой шоколадной глазурью и варёной сгущёнкой. Посыпаны сахарной пудрой</p>
+		</div>
+      </div>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <h2 class="accordion-header">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#nuage">
+		<h1>Нуажи</h1>
+      </button>
+    </h2>
+    <div id="nuage" class="accordion-collapse collapse" data-bs-parent="#nuage">
+      <div class="accordion-body">
+		<div class="item">
+			<h3>Нуаж малиновый</h3>
+			<p>Мусс сливочный с творожным сыром и сметанкой на ванильном бисквите. Внутри пирожного малиновый конфитюр. Покрыто зеркальным ванильным покрытием. Декор - сухая роза</p>
+		</div>
+		<div class="item">
+			<h3>Нуаж апельсиновый</h3>
+			<p>Мусс сливочный с творожным сыром и сметанкой на ванильном бисквите. Внутри пирожного апельсиновый конфитюр. Покрыто зеркальным апельсиновым покрытием. Декор - кокосовая стружка и шафран.</p>
+		</div>
+      </div>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <h2 class="accordion-header">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#bread">
+		<h1>Хлеб</h1>
+      </button>
+    </h2>
+    <div id="bread" class="accordion-collapse collapse" data-bs-parent="#bread">
+      <div class="accordion-body">
+		<div class="item">
+			<h3>Хлеб Воскресенский</h3>
+			<p>Заварной пшеничный хлеб на закваске с цельнозерновой мукой и манной крупой.</p>
+		</div>
+		<div class="item">
+			<h3>Батон Домашний на закваске</h3>
+			<p>Пшеничный на закваске с пшеничной и ржаной мукой</p>
+		</div>
+		<div class="item">
+			<h3>Хлеб заварной с полбой</h3>
+			<p>Заварной хлеб с полбой, семенами подсолнечника и белого льна.</p>
+		</div>
+		<div class="item">
+			<h3>Хлеб Ремесленный с пророщенным зерном</h3>
+			<p>Пшенично-ржаной заварной хлеб с пророщенным зерном ржи</p>
+		</div>
+		<div class="item">
+			<h3>Хлеб 5 залков</h3>
+			<p>Многозерновой пшеничный с цельнозерновой мукой. Хлеб на закваске, содержит кукурузную, пшеничную крупы. Пшеничные, ржаные, овсяные, ячменные, гречневые хлопья. Семена подсолнечника, кунжута и льна.</p>
+		</div>
+		<div class="item">
+			<h3>Багет Французский</h3>
+			<p>Пшеничный багет на опаре с начинкой из масла сливочного, чеснока и с прованскими травами.</p>
+		</div>
       </div>
     </div>
   </div>
