--- a/menu.html
+++ b/menu.html
@@ -41,23 +41,23 @@
       <div class="accordion-body">
 		<div class="item">
 			<h3>Эклер с клубникой</h3>
-			<p>Выпеченный эклер начиняется кремом "Маскарпоне" смешанным с клубничным конфитюром. Сверху обливается шоколадным покрытие и декорируется белым шоколадным покрытием.</p>
+			<p>Выпеченный эклер начиняется кремом "Маскарпоне", смешанным с клубничным конфитюром. Сверху обливается шоколадным покрытием и декорируется белым шоколадным покрытием.</p>
 		</div>
 		<div class="item">
 			<h3>Эклер с манго</h3>
-			<p>Выпеченный эклер начиняется кремом "Маскарпоне" смешанным с конфитюром из манго. Сверху обливается белым шоколадным покрытием и декорируется шоколадным и ликерным покрытием.</p>
+			<p>Выпеченный эклер начиняется кремом "Маскарпоне", смешанным с конфитюром из манго. Сверху обливается белым шоколадным покрытием и декорируется шоколадным и ликерным покрытием.</p>
 		</div>
 		<div class="item">
 			<h3>Эклер с малиной</h3>
-			<p>Выпеченный эклер начиняется кремом "Маскарпоне" смешанным с конфитюром из малины. Сверху покрыт этим же кремом и декорируется шоколадным покрытием и сублимированной малиной.</p>
+			<p>Выпеченный эклер начиняется кремом "Маскарпоне", смешанным с конфитюром из малины. Сверху покрыт этим же кремом и декорируется шоколадным покрытием и сублимированной малиной.</p>
 		</div>
 		<div class="item">
 			<h3>Эклер с лимонным кремом</h3>
-			<p>Выпеченный эклер начиняется кремом "Маскарпоне" смешанным с лимонным конфитюром. Сверху обливается и декорируется белым шоколадным и ликерным покрытием.</p>
+			<p>Выпеченный эклер начиняется кремом "Маскарпоне", смешанным с лимонным конфитюром. Сверху обливается и декорируется белым шоколадным и ликерным покрытием.</p>
 		</div>
 		<div class="item">
 			<h3>Эклер с вишней</h3>
-			<p>Выпеченный эклер начиняется кремом "Маскарпоне" смешанным с конфитюром из вишни. Сверху покрыт этим же кремом, края облиты зеркальным покрытием. Декорируется шоколадным покрытием.</p>
+			<p>Выпеченный эклер начиняется кремом "Маскарпоне", смешанным с конфитюром из вишни. Сверху покрыт этим же кремом, края облиты зеркальным покрытием. Декорируется шоколадным покрытием.</p>
 		</div>
 		 <div class="item">
 			<h3>Эклер с шоколадным и ванильным кремом</h3>
@@ -81,7 +81,7 @@
       <div class="accordion-body">
 		<div class="item">
 			<h3>Торт бисквитный "Сникерс"</h3>
-			<p>Слои шоколадного бисквита промазаны сырным кремом и солёной карамелью. Сверху оформлен солёной карамелью с жареным арахисом и мягким шоколадным покрытием. Декор из сырного кремо и жареных лепесткой арахиса</p>
+			<p>Слои шоколадного бисквита промазаны сырным кремом и солёной карамелью. Сверху оформлен солёной карамелью с жареным арахисом и мягким шоколадным покрытием. Декор из сырного крема и жареных лепесткой арахиса</p>
 		</div>
 		 <div class="item">
 			<h3>Торт бисквитный "Малина с фисташкой"</h3>
@@ -89,7 +89,7 @@
 		</div>
 		<div class="item">
 			<h3>Торт песочный "Встреча"</h3>
-			<p>Три слоя песочного крожа с маком, изюмом и грецким орехом промазаны кремом с варёной сгущёнкой. Сверху покрыт шоколадным масляным кремом. Декор из сливочного крема с цельной сгущёнкой и крема с варёной сгущёнкой</p>
+			<p>Три слоя песочного коржа с маком, изюмом и грецким орехом промазаны кремом с варёной сгущёнкой. Сверху покрыт шоколадным масляным кремом. Декор из сливочного крема с цельной сгущёнкой и крема с варёной сгущёнкой</p>
 		</div> 
 		<div class="item">
 			<h3>Торт слоёный "Наполеон"</h3>
@@ -97,11 +97,11 @@
 		</div> 
 		<div class="item">
 			<h3>Торт бисквитный "Панчо"</h3>
-			<p>Ванильный и шоколадный бисквит, зефирно-сметанный крем, консервированные ананасы. Декор шоколадное покрытие и грецкий орех.</p>
+			<p>Ванильный и шоколадный бисквит, зефирно-сметанный крем, консервированные ананасы. Декор: шоколадное покрытие и грецкий орех.</p>
 		</div>
 		<div class="item">
 			<h3>Торт бисквитный "Тирамису"</h3>
-			<p>Ванильный бисквит, сахарный сироп с кофе и коньяком, крем "Маскарпоне". Сверху этот же кре и посыпка натуральным какао.</p>
+			<p>Ванильный бисквит, сахарный сироп с кофе и коньяком, крем "Маскарпоне". Сверху этот же крем и посыпка натуральным какао.</p>
 		</div>
 		<div class="item">
 			<h3>Торт бисквитный "Молочная девочка"</h3>
@@ -151,7 +151,7 @@
       <div class="accordion-body">
 		<div class="item">
 			<h3>Тарт с орехами и кленовым сиропом</h3>
-			<p>Основа песочного коржа, свилочно-сметанный мусс, арахис, грецкий орех, варёная сгущёнка, кленовый сироп.</p>
+			<p>Основа песочного коржа, сливочно-сметанный мусс, арахис, грецкий орех, варёная сгущёнка, кленовый сироп.</p>
 		</div>
 		<div class="item">
 			<h3>Тарт с вишней</h3>
@@ -166,8 +166,8 @@
 			<p>Основа песочного коржа, сливочно-сметанный мусс, вишня в желе.</p>
 		</div>
 		<div class="item">
-			<h3>Основа песочного коржа, сливочно-сметанный мусс, клубника в желе.</h3>
-			<p></p>
+			<h3>Тарт с клубникой</h3>
+			<p>Основа песочного коржа, сливочно-сметанный мусс, клубника в желе.</p>
 		</div>
       </div>
     </div>
@@ -186,7 +186,7 @@
 		</div>
 		<div class="item">
 			<h3>Хот-дог со сливой</h3>
-			<p>Пирожное состоит из шоколадного мусса, шоколадного бисквита и сваренного и сливы конфитюра. Декор из сливочного крема с цельной сгущёнкой и натурального какао.</p>
+			<p>Пирожное состоит из шоколадного мусса, шоколадного бисквита и сваренного из сливы конфитюра. Декор из сливочного крема с цельной сгущёнкой и натурального какао.</p>
 		</div>
 		<div class="item">
 			<h3>Хот-дог с облепихой</h3>
@@ -208,7 +208,7 @@
 			<p>Выпеченные профитроли начиняются конфитюром из сливы и кремом "Маскарпоне". Заливаются тёмным шоколадным покрытием. Декор из этого же крема и белое шоколадное покрытие.</p>
 		</div>
 		<div class="item">
-			<h3>Профитроли со с варёной сгущёнкой и кремом</h3>
+			<h3>Профитроли с варёной сгущёнкой и кремом</h3>
 			<p>Выпеченные профитроли начиняются варёной сгущёнкой и кремом "Маскарпоне". Оформлены этим же кремом, тёртой шоколадной глазурью и варёной сгущёнкой. Посыпаны сахарной пудрой</p>
 		</div>
       </div>
@@ -224,11 +224,11 @@
       <div class="accordion-body">
 		<div class="item">
 			<h3>Нуаж малиновый</h3>
-			<p>Мусс сливочный с творожным сыром и сметанкой на ванильном бисквите. Внутри пирожного малиновый конфитюр. Покрыто зеркальным ванильным покрытием. Декор - сухая роза</p>
+			<p>Мусс сливочный с творожным сыром и сметанкой на ванильном бисквите. Внутри пирожного малиновый конфитюр. Покрыто зеркальным ванильным покрытием. Декор: сухая роза</p>
 		</div>
 		<div class="item">
 			<h3>Нуаж апельсиновый</h3>
-			<p>Мусс сливочный с творожным сыром и сметанкой на ванильном бисквите. Внутри пирожного апельсиновый конфитюр. Покрыто зеркальным апельсиновым покрытием. Декор - кокосовая стружка и шафран.</p>
+			<p>Мусс сливочный с творожным сыром и сметанкой на ванильном бисквите. Внутри пирожного апельсиновый конфитюр. Покрыто зеркальным апельсиновым покрытием. Декор: кокосовая стружка и шафран.</p>
 		</div>
       </div>
     </div>
@@ -258,12 +258,12 @@
 			<p>Пшенично-ржаной заварной хлеб с пророщенным зерном ржи</p>
 		</div>
 		<div class="item">
-			<h3>Хлеб 5 залков</h3>
+			<h3>Хлеб 5 злаков</h3>
 			<p>Многозерновой пшеничный с цельнозерновой мукой. Хлеб на закваске, содержит кукурузную, пшеничную крупы. Пшеничные, ржаные, овсяные, ячменные, гречневые хлопья. Семена подсолнечника, кунжута и льна.</p>
 		</div>
 		<div class="item">
 			<h3>Багет Французский</h3>
-			<p>Пшеничный багет на опаре с начинкой из масла сливочного, чеснока и с прованскими травами.</p>
+			<p>Пшеничный багет на опаре с начинкой из масла сливочного, чеснока и прованских трав.</p>
 		</div>
       </div>
     </div>
